# VolumeRemesher

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml
Indirect_Predicates-master/: implicit_point.cpp  implicit_point.h  numerics.cpp  numerics.h
Indirect_Predicates-master/predicates/: hand_optimized_predicates.cpp  indirect_predicates.cpp  indirect_predicates.h  update_source_code.bat
cmake/: test_gmpxx.cpp  test_simd.cpp
include/: hand_optimized_predicates.hpp  implicit_point.h  implicit_point.hpp  indirect_predicates.h  indirect_predicates.hpp  numerics.h  numerics.hpp
include/VolumeRemesher/: hand_optimized_predicates.hpp  implicit_point.h  implicit_point.hpp  indirect_predicates.h  indirect_predicates.hpp  memPool.h  numerics.h  numerics.hpp
models/: Octocat-v1.off  Octocat.bg.msh  Octocat.bg.tet  Octocat_medit.msh  bust.off  bust_base.off  dental_bridge.off  dog.off  hilbert.off  mannequin.off  sa21_text.off  test_part2.off  tile.off  wood_fish.off
models/Random_Models_From_T10K/: 209086.off  35269.off  54161.off  66484.off  73161.off  81309.off  97493.off
models/insert-data/: Octocat-v1.off  Octocat_medit.msh
src/: BSP.cpp  BSP.h  conforming_mesh.cpp  delaunay.cpp  delaunay.h  embed.cpp  embed.h  main.cpp  makePolyhedralMesh.cpp
src/VolumeRemesher/: BSP.cpp  BSP.h  conforming_mesh.cpp  conforming_mesh.h  delaunay.cpp  delaunay.h  embed.cpp  embed.h  extended_predicates.cpp  extended_predicates.h  inOutPartition.cpp  main.cpp  makePolyhedralMesh.cpp
src/VolumeRemesher/graph_cut/: energy.h
src/graph_cut/: GCoptimization.cpp  block.h  energy.h  example.cpp_  graph.cpp  maxflow.cpp
